# Pivot-tangent

./: README.md  init_approx.py  pivot_tangent_unencrypted.py
inv_sqr_comp/: CMakeLists.txt  inv_sqrt_comp.cpp
